--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "dev": "vite",
   "build": "tsc && vite build",
   "preview": "vite preview",
-  "start": "vite preview --port $PORT"
+  "start": "vite preview --port 8080 --host"
 },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
